# claude-man

./: .gitignore  CLAUDE.md  CURRENT_STATUS.md  README.md  STATUS.md  TESTING.md
.claude/: settings.local.json
.claude/hooks/: pre-tool-use.sh
.github/workflows/: ci.yml
ROLES/: ARCHITECT.md  DEVELOPER.md  MANAGER.md  STAKEHOLDER.md
claude-man/: Cargo.toml  README.md
claude-man/src/: lib.rs  main.rs
claude-man/src/cli/: commands.rs  mod.rs  output.rs
claude-man/src/core/: auth.rs  logger.rs  mod.rs  process.rs  session.rs
claude-man/src/daemon/: client.rs  mod.rs  protocol.rs  server.rs
claude-man/src/types/: error.rs  mod.rs  role.rs  session.rs
docs/adr/: 0001-claude-cli-wrapper-architecture.md  0002-manager-role-architecture.md  0003-session-persistence-io-logging.md  0004-environment-based-authentication.md  0005-rust-implementation.md  template.md
docs/sow/: sow-0001-phase-1-mvp.md
docs/spec/: claude-man-cli-feature-matrix.md  claude-man-cli.md
