[package]
name = "claude-man"
version = "0.1.0"
edition = "2021"
authors = ["claude-man contributors"]
description = "AI Session Orchestration Tool - Manage multiple Claude AI sessions from a single CLI"
repository = "https://github.com/thepuug/claude-man"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
